--- a/minhastarefas.html
+++ b/minhastarefas.html
@@ -24,9 +24,9 @@
     </header>
 
     <main>
-        <h2>Minhas Tarefas</h2>
+        <h2 class="title-tasks">Minhas Tarefas</h2>
         <div id="tasksContainer" class="tasks-container">
-            <!-- Tarefas serão renderizadas aqui -->
+          
         </div>
     </main>
 
